Bootstrap and item-list component

--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,3 +1,24 @@
-<p>
-  list-item works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="http://www.decentfashion.in/wp-content/uploads/2018/09/feelirung-sad-images-8-300x270.gif" alt="">
+        </div>
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-12">
+                    <h4>Titulo</h4>
+                </div>
+                <div class="col-md-12">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur
+                    </p>
+                </div>
+                <div class="col-md-12">
+                    <button mat-raised-button>Leer Más...</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
