--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-12">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur
+                        Lorem ipsum dolor sit amet consecteturs
                     </p>
                 </div>
                 <div class="col-md-12">
