--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,16 +1,16 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <img src="http://www.decentfashion.in/wp-content/uploads/2018/09/feelirung-sad-images-8-300x270.gif" alt="">
+            <img src={{imagen}} alt="">
         </div>
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-12">
-                    <h4>Titulo</h4>
+                    <h4>{{title}}</h4>
                 </div>
                 <div class="col-md-12">
                     <p>
-                        Lorem ipsum dolor sit amet consecteturs
+                        {{description}}
                     </p>
                 </div>
                 <div class="col-md-12">
