añadir carpeta de imagenes y agregar logo

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top container">
-  <a class="navbar-brand ml-3" href="#"><img src="https://img.freepik.com/free-icon/youtube-logo_318-49909.jpg?size=338c&ext=jpg" width="40px"></a>
+  <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO.png" width="40px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
