--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,3 +1,4 @@
 nav{
-    background:transparent !important;
+    background-color: rgb(0, 0, 0,) !important;
+    background-color: rgba(0, 0, 0, 0.3) !important;
 }
