--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-nav-bar></app-nav-bar>
 <app-list-item></app-list-item>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
