--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
-            <img src={{imagen}} alt="">
+        <div class="bg-image" [style.backgroundImage]="'url('+ imagen +')'" [style.width]="'20em'">
         </div>
         <div class="col-md-6">
             <div class="row">
