--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -1,1 +1,10 @@
-
+<div class="container">
+  <div class="row" *ngFor="let item of items">
+      <div class="col-md-6 mb-4">
+          <app-list-item></app-list-item>
+      </div>
+      <div class="col-md-6 mb-4">
+          <app-list-item></app-list-item>
+      </div>
+           
+</div>
