--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="site-footer fixed-bottom" role="contentinfo">
+<footer class="site-footer" role="contentinfo">
   <div class="container">
       <div class="row">
         
