--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,18 +1,19 @@
 <div class="container">
     <div class="row">
-        <div class="bg-image" [style.backgroundImage]="'url('+ imagen +')'" [style.width]="'20em'">
-        </div>
         <div class="col-md-6">
+            <img src={{imagen}} style="width: 270px; height: 239px;">
+        </div>        
+       <div class="col-md-6">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 mt-4 ml-2">
                     <h4>{{title}}</h4>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12 ml-2">
                     <p>
                         {{description}}
                     </p>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12 ml-2">
                     <button mat-raised-button>Leer Más...</button>
                 </div>
             </div>
