Añadir script de oscurecer el nav al hacer scroll

--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,5 +1,11 @@
-nav{
+.navbar-dark{
+    transition:500ms ease;
     background-color: rgb(0, 0, 0,) !important;
     background-color: rgba(0, 0, 0, 0.4) !important;
     border-radius: 15px;
-}
+  }
+  .navbar-dark.scrolled{
+    background-color: rgba(0, 0, 0, 1) !important;
+  }
+
+  
