--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,3 +1,4 @@
+<!--Inicio navBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO.png" width="50px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,8 +23,9 @@
     </div>
   </div>
 </nav>
+<!--Fin navBar-->
 
-
+<!--Inicio ventana emergente de login-->
 <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -54,8 +56,9 @@
     </div>
   </div>
 </div>
+<!--Fin ventana emergente de login-->
 
-
+<!--Inicio ventana emergente de Registro-->
 <div class="modal fade" id="modalSignInForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -91,3 +94,4 @@
     </div>
   </div>
 </div>
+<!--Fin ventana emergente de registro-->
