--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <!--Inicio navBar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" [ngClass]="{'scrolled': scrolled}">
   <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO.png" width="50px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -18,8 +18,8 @@
       </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
-      <button class="btn btn-success mr-2 my-2 my-sm-0" data-toggle="modal" data-target="#modalLoginForm" >Login</button>
-      <button class="btn btn-success my-2 my-sm-0" data-toggle="modal" data-target="#modalSignInForm" >Sign in</button>
+      <button class="btn btn-danger mr-2 my-2 my-sm-0" data-toggle="modal" data-target="#modalLoginForm" >Login</button>
+      <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalSignInForm" >Sign in</button>
     </div>
   </div>
 </nav>
@@ -51,7 +51,7 @@
 
       </div>
       <form class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-default">Login</button>
+        <button class="btn btn-success">Login</button>
       </form>
     </div>
   </div>
@@ -89,7 +89,7 @@
 
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-deep-orange">Sign up</button>
+        <button class="btn btn-success">Sign up</button>
       </div>
     </div>
   </div>
