--- a/src/app/components/slider-index/slider-index.component.html
+++ b/src/app/components/slider-index/slider-index.component.html
@@ -11,13 +11,15 @@
     <div class="carousel-item active" style="background-image: url('/assets/img/slider-1.jpg')">
       <div class="carousel-caption d-md-block">
         <h3>First Slide</h3>
-        <p>This is a description for the first slide.</p>   
+        <p>This is a description for the first slide.</p>
+        <p><a [routerLink]="['/nosotros']" class="btn btn-danger">Saber más</a></p> 
       </div>
     </div>
     <div class="carousel-item" style="background-image: url('/assets/img/slider-2.jpg')">
       <div class="carousel-caption d-md-block">
         <h3>Second Slide</h3>
         <p>This is a description for the second slide.</p>
+        <p><a [routerLink]="['/nosotros']" class="btn btn-danger">Saber más</a></p>
       </div>
     </div>
   </div>
