--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <!--Inicio navBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" [ngClass]="{'scrolled': scrolled}">
-  <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO.png" width="50px"></a>
+  <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
