--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -8,4 +8,9 @@
     background-color: rgba(0, 0, 0, 1) !important;
   }
 
-  
+  @media screen and (max-width: 600px) {
+    .navbar-dark {
+      background-color: rgba(0, 0, 0, 1) !important;
+      border-radius: 0%;
+    }
+  }
