--- a/src/app/components/slider-index/slider-index.component.html
+++ b/src/app/components/slider-index/slider-index.component.html
@@ -8,18 +8,11 @@
   
   <!-- The slideshow -->
   <div class="carousel-inner">
-    <div class="carousel-item active" style="background-image: url('/assets/img/slider-1.jpg')">
+    <div class="carousel-item" *ngFor="let item of ofertas; first as isFirst" [ngClass]="{'active': isFirst}" style="background-image: url('/assets/img/slider-1.jpg')">
       <div class="carousel-caption d-md-block">
-        <h3>First Slide</h3>
-        <p>This is a description for the first slide.</p>
-        <p><a [routerLink]="['/nosotros']" class="btn btn-danger">Saber más</a></p> 
-      </div>
-    </div>
-    <div class="carousel-item" style="background-image: url('/assets/img/slider-2.jpg')">
-      <div class="carousel-caption d-md-block">
-        <h3>Second Slide</h3>
-        <p>This is a description for the second slide.</p>
-        <p><a [routerLink]="['/nosotros']" class="btn btn-danger">Saber más</a></p>
+    <!--<app-ofertas-slider *ngFor="let item of ofertas; first as isFirst" [(esPrimero)]="isFirst"></app-ofertas-slider>
+      -->
+    <app-ofertas-slider></app-ofertas-slider>
       </div>
     </div>
   </div>
