--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,9 +4,10 @@
         
         <div class="col-sm-6" style="float:left; display:block; padding-top: 20px">
           <h3>Información de contacto</h3>
-          <span class="">Dirección: </span><span class="text-white">Lucena  </span>
-          <span class="">Teléfono: </span><span class="text-white">+34 666 666 666  </span>
-          <span class="">Email: </span><span class="text-white">infinity@work.com</span>
+          <hr>
+          <span>Dirección: </span><span class="text-white">Lucena  </span>
+          <span>Teléfono: </span><span class="text-white">+34 666 666 666  </span>
+          <span>Email: </span><span class="text-white">infinity@work.com</span>
 
           <ul class="list-unstyled footer-link footer-social">
               <a href="https://twitter.com/?lang=es" class="p-1"><span class="fab fa-twitter"></span></a>
@@ -16,8 +17,9 @@
           </ul>
         </div>
 
-        <div class="col-sm-6 footer-info" style="float:left; display:block; padding-top: 20px">
+        <div class="col-sm-6 footer-info" style=" display:block; padding-top: 20px; align-content: center">
           <h3>Accesos rápidos</h3>
+          <hr>
           <a href="#">Sobre nosotros</a><br>
           <a href="#">Términos de uso</a><br>
           <a href="#">Contacto</a><br><br>
