--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,9 +1,12 @@
+hr {
+  background-color: #ffffff
+}
+
 ul li, a{
     text-decoration: none;
     display: inline;
     color: #ffffff;
     position: relative;
-    margin-left: 20px;
     font-family: 'Lato', sans-serif;
     font-size: 20px;
 }
