modificar header de la plantilla contenido

--- a/src/app/components/plantilla-contenido/plantilla-contenido.component.css
+++ b/src/app/components/plantilla-contenido/plantilla-contenido.component.css
@@ -2,8 +2,12 @@
     height: 35vh;
     background-size: cover !important;
     background-image: url('/assets/img/bannerDeporte.png') !important;
+    min-height: 188px !important;
+    max-height: 220px;
+    position: relative;
 }
 
-.container {
-    transform: translateY(240%);
+#container {
+    position: absolute;
+    bottom: 20%;
   }
