--- a/src/app/components/plantilla-contenido/plantilla-contenido.component.html
+++ b/src/app/components/plantilla-contenido/plantilla-contenido.component.html
@@ -1,5 +1,5 @@
 <div id="header">
-  <div class="container text-center">
+  <div id="container" class="container text-center ml-2">
       <h1>Deportes</h1>
   </div>
   
