--- a/src/app/components/plantilla-contenido/plantilla-contenido.component.html
+++ b/src/app/components/plantilla-contenido/plantilla-contenido.component.html
@@ -1,10 +1,9 @@
 <div id="header">
-  <div id="container" class="container text-center ml-2">
-      <h1>Deportes</h1>
-  </div>
   
 </div>
-<div class="mt-4">
+<div class="container text-center"><h1>Deportes</h1></div>
+<div class="mt-2">
+  
   <app-item-list></app-item-list>
 </div>
 <app-footer></app-footer>
