--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-xl-6 col-12">
             <img src={{imagen}} style="width: 270px; height: 239px;">
         </div>        
-       <div class="col-md-6">
+       <div class="col-xl-6 col-12">
             <div class="row">
                 <div class="col-md-12 mt-4 ml-2">
                     <h4>{{title}}</h4>
@@ -13,7 +13,7 @@
                         {{description}}
                     </p>
                 </div>
-                <div class="col-md-12 ml-2">
+                <div class="col-md-12 col-12 ml-2">
                     <button mat-raised-button>Leer Más...</button>
                 </div>
             </div>
