--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -8,13 +8,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-        <a class="nav-link" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
+        <a class="nav-link texto-titulo" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" data-toggle="collapse" [routerLink]="['/contenido']">Contenido</a>
+        <a class="nav-link texto-titulo" data-toggle="collapse" [routerLink]="['/contenido']">Contenido</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
+        <a class="nav-link texto-titulo" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
       </li>
     </ul>
     <div class="form-inline my-2 my-lg-0 d-flex">
