--- a/src/app/components/ofertas-slider/ofertas-slider.component.html
+++ b/src/app/components/ofertas-slider/ofertas-slider.component.html
@@ -1,4 +1,4 @@
-<h3>{{title}}</h3>
-<p>{{description}}</p>
+<h3 class="texto-titulo">{{title}}</h3>
+<p [ngClass]="'texto-descripcion'">{{description}}</p>
 <p><a [routerLink]="['/nosotros']" class="btn btn-danger">Saber más</a></p>
     
