--- a/src/app/components/slider-index/slider-index.component.html
+++ b/src/app/components/slider-index/slider-index.component.html
@@ -8,11 +8,12 @@
   
   <!-- The slideshow -->
   <div class="carousel-inner">
-    <div class="carousel-item" *ngFor="let item of ofertas; first as isFirst" [ngClass]="{'active': isFirst}" style="background-image: url('/assets/img/slider-1.jpg')">
+    <div class="carousel-item" *ngFor="let item of ofertas; first as isFirst" [ngClass]="{'active': isFirst}" background-image: [ngStyle]="{'background-image': 'url('+item.ofertasUrl+')'}">
       <div class="carousel-caption d-md-block">
     <!--<app-ofertas-slider *ngFor="let item of ofertas; first as isFirst" [(esPrimero)]="isFirst"></app-ofertas-slider>
       -->
     <app-ofertas-slider></app-ofertas-slider>
+
       </div>
     </div>
   </div>
