--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,11 +1,13 @@
+@import "../../../assets/scss/variables.scss";
+
 hr {
-  background-color: #ffffff
+  background-color: $color_letras;
 }
 
 ul li, a{
     text-decoration: none;
     display: inline;
-    color: #ffffff;
+    color: $color_letras;
     position: relative;
     font-family: 'Lato', sans-serif;
     font-size: 20px;
@@ -13,7 +15,7 @@ ul li, a{
 
 footer{
     position: absolute;
-    background-color: #333333;
+    background-color: $fondo_footer;
     float: right;
     width: 100%;
     text-align: center;
@@ -21,14 +23,14 @@ footer{
 }
 .footer_form{
     margin-left: 20px;
-    color: #e8e8e7;
+    color: $color_letras;
     
 }
 
 .site-footer {
     padding-bottom: 20px;
-    background: #262626;
-    color: rgba(255, 255, 255, 0.5);
+    background: $fondo_footer;
+    color: $campos
   }
   
   .site-footer p:last-child {
@@ -36,7 +38,7 @@ footer{
   }
   
   .site-footer a {
-    color: #b91817;
+    color: $enlaces;
     border-bottom: 1px solid transparent;
   }
   
@@ -44,7 +46,7 @@ footer{
     font-size: 16px;
     margin-bottom: 20px;
     font-weight: bold;
-    color: #fff;
+    color: $color_letras;
   }
   
   .site-footer .footer-link li {
