--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -14,7 +14,7 @@
                     </p>
                 </div>
                 <div class="col-md-12 col-12 ml-2">
-                    <button mat-raised-button>Leer Más...</button>
+                    <button class="btn btn-danger" mat-raised-button>Leer Más...</button>
                 </div>
             </div>
         </div>
