--- a/src/app/components/list-item/list-item.component.scss
+++ b/src/app/components/list-item/list-item.component.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/scss/variables.scss";
+
 @media (max-width: 991px) {
     .sched .bg-image, .blog .bg-image {
       height: 200px;
