--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,7 +1,10 @@
+@import "../../../assets/scss/variables.scss";
+
 .navbar-dark{
     transition:500ms ease;
-    background-color: rgb(0, 0, 0,) !important;
-    background-color: rgba(0, 0, 0, 0.4) !important;
+    background-color: $fondo_footer !important;
+    //background-color: rgba(0, 0, 0, 0.4) !important;
+    
   }
   .navbar-dark.scrolled{
     background-color: rgba(0, 0, 0, 1) !important;
@@ -15,4 +18,8 @@
 
   .nav-item{
     text-align: right;
-}
+  }
+
+  .nav-link{
+    color: $color_letras !important; 
+  }
