--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,14 +1,12 @@
-
-  
 <div class="container" id="contacto">
         
   <div class="row">
-    <div class="col-6 maps" style="text-align: center">
+    <div class="col-md-6 maps" >
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d17927.55342607222!2d-4.477948582228671!3d37.40937028253289!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6d77336f1e30ef%3A0xb4ae1b92a92b9c84!2sCalle+Juego+de+Pelota%2C+54%2C+14900+Lucena%2C+C%C3%B3rdoba!5e0!3m2!1sen!2ses!4v1543487077952" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
-    <div class="col-6" style="text-align: center">
-      <h2 class="text-uppercase mt-3 font-weight-bold">CONTACTO</h2>
+    <div class="col-md-6" >
+      <h2 class="text-uppercase font-weight-bold">CONTACTO</h2>
       <form action="">
         <div class="row">
           <div class="col-lg-6">
@@ -28,7 +26,7 @@
           </div>
           <div class="col-12">
             <div class="form-group">
-              <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escriba su mensaje" rows="6" cols="30" required></textarea>
+              <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escriba su mensaje" rows="5" cols="30" required></textarea>
             </div>
           </div>
           <div class="col-12">
@@ -36,15 +34,15 @@
           </div>
           </div>
           <div class="col-12">
-            <button class="btn btn-danger" type="submit">Enviar</button>
+            <button class="btn btn-danger" type="submit">Enviar</button><br><br>
           </div>
         </div>
       </form>
       <div>
       
-        <i class="fas fa-phone" style="color: #b91817"></i>  +34 666 666 666<br>
-        <i class="fa fa-envelope mt-3" style="color: #b91817"></i>  infwebdiw@gmail.com<br>
-        <i class="fas fa-map-marker-alt" style="color: #b91817"></i>  Lucena<br>
+        <i class="fas fa-phone" style="color: #b91817"></i>  +34 666 666 666 <br>
+        <i class="fa fa-envelope" style="color: #b91817"></i>  infwebdiw@gmail.com <br>
+        <i class="fas fa-map-marker-alt" style="color: #b91817"></i>  Lucena <br>
       
       </div>
     </div>
