Arreglos nav-bar opacidad (Liada anterior)

--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -3,7 +3,7 @@
 .navbar-dark{
     transition:500ms ease;
     background-color: $fondo_footer !important;
-    //background-color: rgba(0, 0, 0, 0.4) !important;
+    background-color: rgba(0, 0, 0, 0.4) !important;
     
   }
   .navbar-dark.scrolled{
