--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,4 +1,4 @@
-//-----------------Variables del Globales-----------------//
+//-----------------Variables Globales-----------------//
 $fondo: #f6f5f5;
 $letras: #262626; 
 $color_boton: #981914;
