--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -40,9 +40,9 @@
       </form>
       <div>
       
-        <i class="fas fa-phone" style="color: #b91817"></i>  +34 666 666 666 <br>
-        <i class="fa fa-envelope" style="color: #b91817"></i>  infwebdiw@gmail.com <br>
-        <i class="fas fa-map-marker-alt" style="color: #b91817"></i>  Lucena <br>
+        <i class="fas fa-phone" ></i>  +34 666 666 666 <br>
+        <i class="fa fa-envelope" ></i>  infwebdiw@gmail.com <br>
+        <i class="fas fa-map-marker-alt" ></i>  Lucena <br>
       
       </div>
     </div>
