--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -3,16 +3,16 @@
 .navbar-dark{
     transition:500ms ease;
     background-color: $fondo_footer !important;
-    background-color: rgba(0, 0, 0, 0.4) !important;
+   // background-color: rgba(0, 0, 0, 0.4) !important;
     
   }
   .navbar-dark.scrolled{
-    background-color: rgba(0, 0, 0, 1) !important;
+    background-color: $fondo_footer /*rgba(0, 0, 0, 1)*/ !important;
   }
 
   @media screen and (max-width: 992px) {
     .navbar-dark {
-      background-color: rgba(0, 0, 0, 1) !important;
+      background-color: $fondo_footer/*rgba(0, 0, 0, 1)*/ !important;
     }
   }
 
