--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -5,7 +5,7 @@ $color_boton: #981914;
 
 
 //-----------------Variables del footer y Nav Bar---------//
-$fondo_footer: #0f0f0f;
+$fondo_footer: #333333;
 $color_letras: #f6f5f5;
 $enlaces: #b91817;
 $campos: rgba(255, 255, 255, 0.5);
