añadir aside navbar y dropdown menu

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,36 @@
+ <!-- Slide Menu-->
+<aside class="side-menu__container" [ngClass]="{'side-menu__container-active': showMenu}" (click)="toggleMenu()">
+  <nav class="slide-menu" [ngClass]="{'slide-menu-active': showMenu}" (click)="$event.stopImmediatePropagation();">
+      <section class="menu-header">
+        <span class="greeting__text">Menu</span>
+      </section>
+      <section class="menu-body" (click)="toggleMenu()">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+            <a class="nav-link" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="list-group-item" routerLinkActive="active">
+            <a class="nav-link" data-toggle="collapse" [routerLink]="['/contenido']">Contenido</a>
+          </li>
+          <li class="list-group-item" routerLinkActive="active">
+            <a class="nav-link" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
+          </li>
+        </ul>
+        <div class="form-inline my-2 my-lg-0 justify-content-center">
+          <button class="btn btn-danger mr-2 my-2 my-sm-0" data-toggle="modal" data-target="#modalLoginForm" >Login</button>
+          <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalSignInForm" >Sign in</button>
+        </div>
+      </section>
+      <section class="menu-footer">
+  
+      </section>
+  </nav>
+</aside>
+
 <!--Inicio navBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" [ngClass]="{'scrolled': scrolled}">
   <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" (click)="toggleMenu()" type="button" data-toggle="collapse">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -10,8 +39,16 @@
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" data-toggle="collapse" [routerLink]="['/contenido']">Contenido</a>
+      <li class="nav-item dropdown" routerLinkActive="active">
+        <a class="nav-link dropdown-toggle btn" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Contenido
+        </a>
+        <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" data-toggle="collapse" [routerLink]="['/contenido']">Contenido 1</a>
+          <a class="dropdown-item" data-toggle="collapse" [routerLink]="['/contenido']">Contenido 2</a>
+          <a class="dropdown-item" data-toggle="collapse" [routerLink]="['/contenido']">Contenido 3</a>
+          <a class="dropdown-item" data-toggle="collapse" [routerLink]="['/contenido']">Contenido 4</a>
+        </div>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
