Arreglo css dropdown

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -40,14 +40,14 @@
         <a class="nav-link texto-titulo" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown" routerLinkActive="active">
-        <a class="nav-link dropdown-toggle btn" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle texto-titulo btn" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Contenido
         </a>
-        <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" data-toggle="collapse" [routerLink]="['/contenido']">Contenido 1</a>
-          <a class="dropdown-item" data-toggle="collapse" [routerLink]="['/contenido']">Contenido 2</a>
-          <a class="dropdown-item" data-toggle="collapse" [routerLink]="['/contenido']">Contenido 3</a>
-          <a class="dropdown-item" data-toggle="collapse" [routerLink]="['/contenido']">Contenido 4</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
+          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/tienda']">Tienda</a>
+          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/alquiler']">Alquiler</a>
+          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
         </div>
       </li>
       <li class="nav-item" routerLinkActive="active">
