--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -2,7 +2,8 @@
 
 .navbar-dark{
     transition:500ms ease;
-    background-color: $fondo_footer !important;
+    z-index: 24;
+    background-color: $fondo_navBar_opacity !important;
    // background-color: rgba(0, 0, 0, 0.4) !important;
     
   }
@@ -29,7 +30,7 @@
 = = = = = = = = =
 */
 .menu-body .nav-link{
-  color: black;
+  color: $fondo_footer !important;
 }
 
 .side-menu__container {
@@ -56,7 +57,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #0c1066;
+  background-color: $fondo_footer;
   opacity: 0;
   transition: opacity 300ms linear;
   will-change: opacity;
@@ -77,7 +78,7 @@
   width: 90%;
   max-width: 26rem;
   background-color: white;
-  box-shadow: 0 0 2rem rgba(0, 0, 255, 0.1);
+
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 2fr 4fr 1fr;
@@ -91,12 +92,12 @@
 }
 
 .menu-header {
-  background: linear-gradient(to right, #00FF9B, #5f84fb);
+  background: $fondo_footer;
   display: grid;
   width: 100%;
   align-content: center;
   color: white;
-  box-shadow: 0 0.5rem 2rem rgba(0, 0, 255, 0.2);
+
 }
 
 .greeting__text {
