--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -9,6 +9,7 @@ $fondo_footer: #333333;
 $color_letras: #f6f5f5;
 $enlaces: #b91817;
 $campos: rgba(255, 255, 255, 0.5);
+$fondo_navBar_opacity: rgba(51, 51, 51, 0.6);
 
 //-----------------Variables de slider-----------------//
 $color_titulo_slider: #f6f5f5;
