Arreglo contacto mapa

--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,7 +1,9 @@
+<div class="container-fluid">
 <div class="container" id="contacto">
         
   <div class="row">
-    <div class="col-md-6 maps" >
+    <!-- Mapa con ubicación -->
+    <div class="col-md-6 maps border border-dark m-0 p-0" > 
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d17927.55342607222!2d-4.477948582228671!3d37.40937028253289!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6d77336f1e30ef%3A0xb4ae1b92a92b9c84!2sCalle+Juego+de+Pelota%2C+54%2C+14900+Lucena%2C+C%C3%B3rdoba!5e0!3m2!1sen!2ses!4v1543487077952" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
@@ -10,7 +12,8 @@
       <form action="">
         <div class="row">
           <div class="col-lg-6">
-            <div class="form-group">
+            <!-- Formulario de contacto (Si se deja algún campo en blanco salta un aviso para quue se rellene) -->
+            <div class="form-group"> 
               <input type="text" class="form-control mt-2" placeholder="Nombre" required>
             </div>
           </div>
@@ -40,6 +43,7 @@
       </form>
       <div>
       
+        <!-- Datos de contacto en general -->
         <i class="fas fa-phone" ></i>  +34 666 666 666 <br>
         <i class="fa fa-envelope" ></i>  infwebdiw@gmail.com <br>
         <i class="fas fa-map-marker-alt" ></i>  Lucena <br>
@@ -49,4 +53,5 @@
 
   </div>
         
+</div>
 </div>
