--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,6 +2,7 @@
   <div class="container">
       <div class="row">
         
+        <!-- Información general de contacto -->
         <div class="col-sm-6" style="float:left; display:block; padding-top: 20px">
           <h3>Información de contacto</h3>
           <hr>
@@ -9,6 +10,7 @@
           <span>Teléfono: </span><span class="text-white">+34 666 666 666  </span>
           <span>Email: </span><span class="text-white">infinity@work.com</span>
 
+          <!-- Iconos de redes sociales -->
           <ul class="list-unstyled footer-link footer-social">
               <a href="https://twitter.com/?lang=es" class="p-1"><span class="fab fa-twitter"></span></a>
               <a href="https://es-es.facebook.com/" class="p-1"><span class="fab fa-facebook"></span></a>
@@ -17,6 +19,7 @@
           </ul>
         </div>
 
+        <!-- Enlaces -->
         <div class="col-sm-6 footer-info" style=" display:block; padding-top: 20px; align-content: center">
           <h3>Accesos rápidos</h3>
           <hr>
@@ -26,6 +29,7 @@
         </div>
       </div>
 
+      <!-- Pie de página copyright -->
       <div class="container" align="center">
           <div class="row">
               <div class="col-sm-12 text-sm-center text-center" >
