--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -30,7 +30,7 @@ footer{
 .site-footer {
     padding-bottom: 20px;
     background: $fondo_footer;
-    color: $campos
+    color: $campos;
   }
   
   .site-footer p:last-child {
