Add: Imagen y Titulo dinamicos

--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col-md-12 mt-4 ml-2">
                     <!-- Inyeción Título -->
-                    <h4>{{title}}</h4>
+                    <h4>{{tittle}}</h4>
                 </div>
                 <div class="col-md-12 ml-2">
                     <p>
