--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -1,9 +1,7 @@
 <div class="container">
-  <div class="row" *ngFor="let item of items">
-    <div class="col-md-6 mb-4 card">
-        <app-list-item imagen={{item.image}}></app-list-item>
+  <div class="row" >
+    <div class="col-md-6 mb-4 card" *ngFor="let item of items">
+        <app-list-item [imagen]=item.image [tittle]=item.tittle [description]=item.description></app-list-item>
     </div>
-    <div class="col-md-6 mb-4 card">
-        <app-list-item ></app-list-item>
-    </div>   
+  </div>
 </div>
