Componentes actualizados para recuperar datos desde firebase

--- a/src/app/components/tienda/tienda.component.html
+++ b/src/app/components/tienda/tienda.component.html
@@ -3,6 +3,6 @@
 </div>
 <div class="container text-center"><h1>Tienda</h1></div>
 <div class="mt-2">
-  <app-item-list></app-item-list>
+  <app-item-list [parent]=id></app-item-list>
 </div>
 <app-footer></app-footer>
