Enlaces del footer arreglados

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -23,9 +23,8 @@
         <div class="col-sm-6 footer-info" style=" display:block; padding-top: 20px; align-content: center">
           <h3>Accesos rápidos</h3>
           <hr>
-          <a href="#">Sobre nosotros</a><br>
-          <a href="#">Términos de uso</a><br>
-          <a href="#">Contacto</a><br><br>
+          <a href="terminos">Términos de uso</a><br>
+          <a href="contacto">Contacto</a><br><br>
         </div>
       </div>
 
@@ -33,7 +32,7 @@
       <div class="container" align="center">
           <div class="row">
               <div class="col-sm-12 text-sm-center text-center" >
-                  <p>&copy;Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados</p>
+                  <p>&copy;Copyright &copy;2018 Todos los derechos reservados</p>
               </div>
           </div>
       </div>
