--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -70,6 +70,12 @@ footer{
   
   .footer-social a:hover {
     color: #FFF;
+
+  }
+
+  #easter{
+    cursor: text ;
+    color: $fondo_footer;
   }
 
   .footer-info a:hover {
