--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -32,7 +32,7 @@
       <div class="container" align="center">
           <div class="row">
               <div class="col-sm-12 text-sm-center text-center" >
-                  <p>&copy;Copyright &copy;2018 Todos los derechos reservados</p>
+                  <p><a id="easter" href="#">&copy;</a>Copyright &copy;2018 Todos los derechos reservados</p>
               </div>
           </div>
       </div>
