--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xl-6 col-12">
-            <img src={{imagen}}>
+            <img src="../../../assets/img/{{imagen}}">
         </div>        
        <div class="col-xl-6 col-12">
             <div class="row">
