--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -5,21 +5,27 @@
         <a class="navbar-brand ml-3 justify-content-center" href="#"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
         <span class="greeting__text">Menu</span>
       </section>
-      <section class="menu-body" (click)="toggleMenu()">
+      <section class="menu-body">
         <ul class="list-group list-group-flush">
-          <li class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
+          <li class="list-group-item">
+            <a class="nav-link" (click)="toggleMenu()" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
           </li>
-          <li class="list-group-item" routerLinkActive="active">
-            <a class="nav-link" data-toggle="collapse" [routerLink]="['/contenido']">Contenido</a>
+          <li class="list-group-item">
+            <a class="nav-link dropdown-toggle" (click)="toggleDropDown()">Contacto</a>
+            <div class="dropdown-container" *ngIf="showDropDown" (click)="toggleMenu()">
+              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
+              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/tienda']">Tienda</a>
+              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/alquiler']">Alquiler</a>
+              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
+            </div>
           </li>
-          <li class="list-group-item" routerLinkActive="active">
-            <a class="nav-link" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
+          <li class="list-group-item">
+            <a class="nav-link" (click)="toggleMenu()" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
           </li>
         </ul>
         <div class="form-inline my-2 my-lg-0 justify-content-center">
-          <button class="btn btn-danger mr-2 my-2 my-sm-0" data-toggle="modal" data-target="#modalLoginForm" >Login</button>
-          <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalSignInForm" >Sign in</button>
+          <button (click)="toggleMenu()" class="btn btn-danger mr-2 my-2 my-sm-0" data-toggle="modal" data-target="#modalLoginForm" >Login</button>
+          <button (click)="toggleMenu()" class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalSignInForm" >Sign in</button>
         </div>
       </section>
       <section class="menu-footer">
@@ -30,10 +36,10 @@
 
 <!--Inicio navBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" [ngClass]="{'scrolled': scrolled}">
-  <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
   <button class="navbar-toggler" (click)="toggleMenu()" type="button" data-toggle="collapse">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
