--- a/src/app/components/nuestras-instalaciones/nuestras-instalaciones.component.html
+++ b/src/app/components/nuestras-instalaciones/nuestras-instalaciones.component.html
@@ -1,7 +1,7 @@
 <div id="header">
   
 </div>
-<div class="container text-center"><h1>Nuestras instalaciones</h1></div>
+<div class="container text-center"><h1>Instalaciones</h1></div>
 <div class="mt-2">
   <app-item-list [parent]=id></app-item-list>
 </div>
