--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -8,21 +8,22 @@
     </div>
 
     <div class="col-md-6" >
+      <br>
       <h2 class="text-uppercase font-weight-bold">CONTACTO</h2>
       <form action="">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-md-6">
             <!-- Formulario de contacto (Si se deja algún campo en blanco salta un aviso para quue se rellene) -->
             <div class="form-group"> 
               <input type="text" class="form-control mt-2" placeholder="Nombre" required>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-md-6">
             <div class="form-group">
               <input type="email" class="form-control mt-2" placeholder="Email" required>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-md-6">
             <div class="form-group">
               <input type="telefono" class="form-control mt-2" placeholder="Teléfono" required>
             </div>
@@ -46,7 +47,7 @@
         <!-- Datos de contacto en general -->
         <i class="fas fa-phone" ></i>  +34 666 666 666 <br>
         <i class="fa fa-envelope" ></i>  infwebdiw@gmail.com <br>
-        <i class="fas fa-map-marker-alt" ></i>  Lucena <br>
+        <a href="javier"><i class="fas fa-map-marker-alt" ></i></a>  Lucena <br>
       
       </div>
     </div>
