Añadir juego Juan Carlos

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -73,9 +73,9 @@ footer{
 
   }
 
-  #easter{
+  .easter{
     cursor: text ;
-    color: $fondo_footer;
+    color: $fondo_footer !important;
   }
 
   .footer-info a:hover {
