--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -32,7 +32,7 @@
       <div class="container" align="center">
           <div class="row">
               <div class="col-sm-12 text-sm-center text-center" >
-                  <p><a id="easter" href="fgame">&copy;</a>Copyright &copy;2018 Todos los derechos reservados</p>
+                  <p><a class="easter" href="fgame">&copy;</a>Copyright &copy;2018 Todos los derechos <a class="easter" href="jcgame">&copy;</a> reservados</p>
               </div>
           </div>
       </div>
