--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,22 +1,23 @@
 <div class="container">
     <div class="row">
-        <div class="col-xl-6 col-12">
+        <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
             <img src="../../../assets/img/{{imagen}}">
         </div>        
-       <div class="col-xl-6 col-12">
+       <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
             <div class="row">
                 <div class="col-md-12 mt-4 ml-2">
                     <!-- Inyeción Título -->
                     <h4>{{tittle}}</h4>
                 </div>
-                <div class="col-md-12 ml-2">
+                <div class="col-md-12 ml-2" *ngIf="!seeMore">
                     <p>
                         <!-- Inyección componente  -->
-                        {{description}}
+                        {{shortDescription}}
                     </p>
                 </div>
                 <div class="col-md-12 col-12 ml-2">
-                    <button class="btn btn-danger" mat-raised-button>Leer Más...</button>
+                    <button class="btn btn-danger" (click)="toogleSeeMore()" mat-raised-button>Leer Más...</button>
+                    <div *ngIf="seeMore">{{description}}</div>
                 </div>
             </div>
         </div>
