--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -15,6 +15,7 @@
             <div class="dropdown-container" *ngIf="showDropDown" (click)="toggleMenu()">
               <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
               <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/tienda']">Tienda</a>
+              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a>
               <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/alquiler']">Alquiler</a>
               <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
             </div>
@@ -53,6 +54,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/tienda']">Tienda</a>
+          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a>
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/alquiler']">Alquiler</a>
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
         </div>
