slider con ofertas de la base de datos

--- a/src/app/components/ofertas-slider/ofertas-slider.component.html
+++ b/src/app/components/ofertas-slider/ofertas-slider.component.html
@@ -1,4 +1,4 @@
-<h3 class="texto-titulo slider">{{title}}</h3>
+<h3 class="texto-titulo slider">{{tittle}}</h3>
 <p [ngClass]="'texto-descripcion slider'">{{description}}</p>
-<p><a [routerLink]="['/nosotros']" class="btn btn-danger">Saber más</a></p>
+<p><a [routerLink]="['/contacto']" class="btn btn-danger">Saber más</a></p>
     
