--- a/src/app/components/nuestras-instalaciones/nuestras-instalaciones.component.scss
+++ b/src/app/components/nuestras-instalaciones/nuestras-instalaciones.component.scss
@@ -8,6 +8,74 @@
     max-height: 220px;
 }
 
+video {
+	width: auto;
+	height: 100%;
+}
 .container {
     transform: translatey(-200%)
   }
+
+  #video-container {
+	width: 490px;
+	height: 370px;
+	position: relative;
+	text-align: center;
+	margin: auto;
+	border-style: solid;
+}
+
+#video-controls {
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 5px;
+	opacity: 0;
+	-webkit-transition: opacity .3s;
+	-moz-transition: opacity .3s;
+	-o-transition: opacity .3s;
+	-ms-transition: opacity .3s;
+	transition: opacity .3s;
+	background-image: linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
+	background-image: -o-linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
+	background-image: -moz-linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
+	background-image: -webkit-linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
+	background-image: -ms-linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
+
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.13, $enlaces),
+		color-stop(1, $enlaces)
+	);
+}
+
+#video-container:hover #video-controls {
+	opacity: .9;
+}
+
+button {
+	height: 30px;
+	background: rgba(0,0,0,.5);
+	border: 0;
+	color: $color_letras;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-o-border-radius: 3px;
+	border-radius: 3px;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+#seek-bar {
+	width: 340px;
+}
+
+#volume-bar {
+	width: 50px;
+}
