Añadir componente recursos

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -14,10 +14,9 @@
             <a class="nav-link dropdown-toggle" (click)="toggleDropDown()">Servicios</a>
             <div class="dropdown-container" *ngIf="showDropDown" (click)="toggleMenu()">
               <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
-              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/tienda']">Tienda</a>
               <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a>
-              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/alquiler']">Alquiler</a>
               <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
+              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/recursos']">Recursos</a>
             </div>
           </li>
           <li class="list-group-item">
@@ -53,10 +52,9 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
-          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/tienda']">Tienda</a>
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a>
-          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/alquiler']">Alquiler</a>
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
+          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/recursos']">Recursos</a>
         </div>
       </li>
       <li class="nav-item" routerLinkActive="active">
