--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -5,8 +5,8 @@
                             <option value="tienda">Tienda</option>
                             <option value="ninstalaciones">Instalaciones</option>
                             <option value="noticias">Noticias</option>
-                            <option value="tienda">Tienda</option>
                             <option value="cursos">Cursos</option>
+                            <option value="recursos">Recursos</option>
                           </select> <br>
     <label>Título</label><input type="text" #tittle> <br>
     <label>Imagen</label><input type="text" #imagen>  <br>
