--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
-            <img src="../../../assets/img/{{imagen}}">
-        </div>        
+            <img src="../../../assets/img/{{id}}/{{imagen}}">
+        </div>       
        <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
             <div class="row">
                 <div class="col-md-12 mt-4 ml-2">
@@ -16,7 +16,9 @@
                     </p>
                 </div>
                 <div class="col-md-12 col-12 ml-2">
-                    <button class="btn btn-danger" (click)="toogleSeeMore()" mat-raised-button>Leer Más...</button>
+                    <button class="btn btn-danger" *ngIf="!seeMore" (click)="toogleSeeMore()" mat-raised-button>Mostrar Más</button>
+                    <button class="btn btn-danger" *ngIf="seeMore" (click)="toogleSeeMore()" mat-raised-button>Mostrar menos</button>
+                    
                     <div *ngIf="seeMore">{{description}}</div>
                 </div>
             </div>
