slider con ofertas actualizado

--- a/src/app/components/ofertas-slider/ofertas-slider.component.html
+++ b/src/app/components/ofertas-slider/ofertas-slider.component.html
@@ -1,4 +1,5 @@
 <h3 class="texto-titulo slider">{{tittle}}</h3>
-<p [ngClass]="'texto-descripcion slider'">{{description}}</p>
+<p id="descripcion" class="mb-2" [ngClass]="'texto-descripcion slider'">{{description}}</p>
+
 <p><a [routerLink]="['/contacto']" class="btn btn-danger">Saber más</a></p>
     
