--- a/src/app/components/slider-index/slider-index.component.html
+++ b/src/app/components/slider-index/slider-index.component.html
@@ -4,11 +4,12 @@
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
   </ul>
   
   <!-- The slideshow -->
   <div class="carousel-inner">
-    <div class="carousel-item" *ngFor="let item of items; first as isFirst" [ngClass]="{'active': isFirst}" background-image: [ngStyle]="{'background-image': 'url(assets/img/' + item.image + ')'}">
+    <div class="carousel-item" *ngFor="let item of items; first as isFirst" [ngClass]="{'active': isFirst}" background-image: [ngStyle]="{'background-image': 'url(assets/img/ofertas/' + item.image + ')'}">
       <div class="carousel-caption d-md-block">
     <!--<app-ofertas-slider *ngFor="let item of ofertas; first as isFirst" [(esPrimero)]="isFirst"></app-ofertas-slider>
       -->
