3 noticias y comienzo de recursos legales

--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -2,7 +2,7 @@
   <br>
   <form class="mt-5">
     <label>Sección</label><select #section>
-                            <option value="tienda">Tienda</option>
+                            <!-- <option value="tienda">Tienda</option> -->
                             <option value="ninstalaciones">Instalaciones</option>
                             <option value="noticias">Noticias</option>
                             <option value="cursos">Cursos</option>
