Arreglo instalaciones (vista móvil)

--- a/src/app/components/juegos/javier/javier.component.scss
+++ b/src/app/components/juegos/javier/javier.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/scss/variables.scss";
 
 canvas {
-    background: #eee;
+    background: $fondo;
     display: block;
     margin: 0 auto;
 }
