--- a/src/app/components/nuestras-instalaciones/nuestras-instalaciones.component.scss
+++ b/src/app/components/nuestras-instalaciones/nuestras-instalaciones.component.scss
@@ -9,7 +9,7 @@
 }
 
 video {
-	width: auto;
+	width: 100%;
 	height: 100%;
 }
 .container {
@@ -17,8 +17,8 @@ video {
   }
 
   #video-container {
-	width: 490px;
-	height: 370px;
+	width: 410px;
+	height: 310px;
 	position: relative;
 	text-align: center;
 	margin: auto;
@@ -38,11 +38,11 @@ video {
 	-o-transition: opacity .3s;
 	-ms-transition: opacity .3s;
 	transition: opacity .3s;
-	background-image: linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
-	background-image: -o-linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
-	background-image: -moz-linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
-	background-image: -webkit-linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
-	background-image: -ms-linear-gradient(bottom, $enlaces 13%, $enlaces 100%);
+	background-image: linear-gradient(to top, $enlaces 13%, $enlaces 100%);
+	background-image: -o-linear-gradient(to top, $enlaces 13%, $enlaces 100%);
+	background-image: -moz-linear-gradient(to top, $enlaces 13%, $enlaces 100%);
+	background-image: -webkit-linear-gradient(to top, $enlaces 13%, $enlaces 100%);
+	background-image: -ms-linear-gradient(to top, $enlaces 13%, $enlaces 100%);
 
 	background-image: -webkit-gradient(
 		linear,
@@ -73,7 +73,7 @@ button:hover {
 }
 
 #seek-bar {
-	width: 340px;
+	width: 250px;
 }
 
 #volume-bar {
